Some fixes in some places

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@ backend/Conexion.php
 backend/Conexion.php
 app/vendor/tecnickcom/tc-lib-pdf/
 backend/Nuevaca.php
+backend/Conexion.php
+backend/Conexion.php
+backend/Conexion.php
+backend/Conexion.php
